--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx eleventy",
-    "watch": "npx eleventy --serve",
-    "serve": "http-server ./_site",
-    "dev": "run-p watch serve"
+    "serve": "npx eleventy --serve"
   },
   "repository": {
     "type": "git",
