Remove paths from CSP domains

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
   for = "/*"
 
   [headers.values]
-    Content-Security-Policy-Report-Only = "default-src 'none'; font-src https://s3.amazonaws.com/fonts.koser.us; script-src 'self' https://cdn.commento.io/js; connect-src 'self'; img-src 'self' https://cdn.commento.io/api/commenter/photo; style-src 'self' https://cdn.commento.io/css; base-uri 'self'; form-action 'self'" 
+    Content-Security-Policy-Report-Only = "default-src 'none'; font-src https://s3.amazonaws.com; script-src 'self' https://cdn.commento.io; connect-src 'self'; img-src 'self' https://cdn.commento.io; style-src 'self' https://cdn.commento.io; base-uri 'self'; form-action 'self'" 
