--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
   for = "/*"
 
   [headers.values]
-    Content-Security-Policy-Report-Only = "default-src 'none'; font-src https://s3.amazonaws.com; script-src 'self' https://cdn.commento.io; connect-src 'self'; img-src 'self' https://cdn.commento.io; style-src 'self' https://cdn.commento.io; base-uri 'self'; form-action 'self'" 
+    Content-Security-Policy-Report-Only = "default-src 'none'; base-uri 'self'; connect-src 'self' https://commento.io; font-src https://s3.amazonaws.com; form-action 'self'; img-src 'self' data:image/svg+xml https://cdn.commento.io; media-src https://s3.amazonaws.com https://www.youtube.com; script-src 'self' https://cdn.commento.io; style-src 'self' https://cdn.commento.io" 
