--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   for = "/*"
 
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; base-uri 'self'; connect-src 'self' https://commento.io https://www.youtube.com; font-src https://s3.amazonaws.com; form-action 'self'; frame-src https://www.youtube.com; img-src 'self' https://s3.amazonaws.com data: https://cdn.commento.io; media-src https://s3.amazonaws.com https://www.youtube.com; script-src 'self' https://cdn.commento.io; style-src 'self' https://cdn.commento.io 'unsafe-inline'" 
+    Content-Security-Policy = "default-src 'self'; base-uri 'self'; connect-src 'self' https://www.youtube.com; font-src https://s3.amazonaws.com; form-action 'self'; frame-src https://www.youtube.com; img-src 'self' https://s3.amazonaws.com; media-src https://s3.amazonaws.com https://www.youtube.com" 
     
     Feature-Policy = "accelerometer 'none'; ambient-light-sensor 'none'; autoplay 'none'; camera 'none'; encrypted-media 'none';fullscreen 'self'; geolocation 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; midi 'none'; payment 'none';picture-in-picture 'none'; speaker 'self'; sync-xhr 'none'; usb 'none'; vibrate 'none'; vr 'none'"
 
